--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="stylesheet" href="assets/style/main.css">
   <link rel="stylesheet" href="assets/style/style.css">
-  <title>winter23_gregslist_async</title>
+  <title>Greglist 2.0</title>
 </head>
 
 <body>
@@ -21,17 +21,25 @@
       <a class="navbar-brand ms-3" href="#">
         <img src="https://codeworks.blob.core.windows.net/public/assets/img/cw-mark.png" height="45" alt=""
           loading="lazy">
-        <span class="ms-2">winter23_gregslist_async</span>
+        <span class="ms-2">Greglist 2.0</span>
       </a>
+      <div class="ms-3 d-flex gap-4 align-items-center">
+        <button class="btn btn-outline-light" onclick="app.carsController.show()">Cars</button>
+        <button class="btn btn-outline-light" onclick="app.housesController.show()">Houses</button>
+      </div>
     </nav>
   </header>
+
   <main>
     <div class="container-fluid">
       <div class="row mt-3" id="listings">
 
+    
+
       </div>
     </div>
   </main>
+
   <footer class="sticky-bottom" id="form-button">
 
   </footer>
